# Stypuff

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  MANIFEST.in  README.md  branch.cc  codelist.txt  dados.stypdata  dadosexm.styp  examples.styp  localdata.cc  meu_programa.styp  novo_package.styp  pyproject.toml  setup.cfg  stypuff_interpreter.py  stypuffheart.cc  tests.cc
.github/workflows/: ci.yml  publish-python.yml
tests/: test_data_stypuff.py
